meja/tests/row-subtract-bad-present.meja
let f = fun (x : [[`A | `B] - `A], y : [`A | `B], b) => {
  if (b) { x; } else { y; };
};
